--- a/_config.yml
+++ b/_config.yml
@@ -7,24 +7,24 @@ highlighter: rouge
 markdown: kramdown
 disqus: dbyll
 google_analytics: dbyll
-title: dbyll
+title: Mike Fennemore
 
 defaults:
   -
     scope:
       path: "" # empty string for all files
     values:
-      title: dbyll
+      title: Mike Fennemore
 
 description: Stylish Jekyll Theme
 author:
-  name: dbyll
-  email: dbyll@ismaildemirbilek.com
-  github: dbtek
-  twitter: dbtek
+  name: Mike Fennemore
+  email: mike.fennemore@sentia.com
+  github: mikef-nl
+  twitter: mikef.nl
   pinterest: asd123
   linkedin: asd123
-  bio: Your stylish, minimalist theme!
+  bio: Working on automation and operations
   email_md5: 726351295ec82e145928582f595aa3aa
 
 rss_path: feed.xml
