--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   github: mikef-nl
   twitter: mikef_nl
   pinterest: 
-  linkedin: https://www.linkedin.com/in/mike-fennemore-58506b3a/
+  linkedin: mike-fennemore-58506b3a
   bio: Working on automation and operations
   email_md5: 
 
