--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   pinterest: 
   linkedin: mike-fennemore-58506b3a
   bio: Working on automation and operations
-  email_md5: 
+  email_md5: 725e518143de8601d3e449912f8444ec
 
 rss_path: feed.xml
 categories_path: categories.html
