--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ defaults:
 description: Working on automation and operations
 author:
   name: Mike Fennemore
-  email: mike.fennemore@sentia.com
+  email: mikef.sa@gmail.com
   github: mikef-nl
   twitter: mikef_nl
   pinterest: 
